--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -316,8 +316,8 @@ footer {
 @media (max-width: 991px) {
     .logo {
         margin-top: 20px;
-        width: 250px;
-        text-align: left;
+        width: 96%;
+        text-align: center;
     }
     .logo img {
        max-width: 250px;
