--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -858,5 +858,8 @@ footer {
     .header-modelo-2016-txt {
         text-align: center;
     }
+    .titulo-sobre-a-loja h3 {
+        text-align: center;
+    }
 }
 /* FIM Ajustes respoinsivo home */
