--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -358,6 +358,7 @@ footer {
 .header-modelo-2016-txt h4 {
     margin: 0px;
     font-size: 14px;
+    margin-top: 35px;
 }
 .atendimento h2 {
     color: rgb(51, 51, 51);
@@ -843,6 +844,11 @@ footer {
     font-weight: bold;
 }
 
+
+.home-imgdemo img {
+    max-height: 130px;
+    margin-top: 140px;
+}
 
 /* Ajustes respoinsivo home */
 @media screen and (max-width: 991px) {
